Changed to Jakarta dependencies